Add MT103ToJsonTransformer with unit tests. Change switch in mt103 text block parsing to match fields without options and then assign according to the option. Improve unit tests of the text block parsing.