@@ -96,7 +96,7 @@ public class Field72 {
 
             return new Field72(option,
                     // Values group -> "line1\nline2\n" -> ["line1", "line2"]
-                    List.of(field72Matcher.group().split(MTParserConstants.LINE_BREAK_REGEX_PATTERN)));
+                    Arrays.asList(field72Matcher.group().split(MTParserConstants.LINE_BREAK_REGEX_PATTERN)));
         } else {
             throw new MTMessageParsingException(String.format(MTParserConstants.INVALID_FIELD_IN_BLOCK_MESSAGE,
                     MT103Constants.SENDER_TO_RECEIVER_INFORMATION, ConnectorConstants.TEXT_BLOCK));
